--- a/areas/core/veth_benchmark03.org
+++ b/areas/core/veth_benchmark03.org
@@ -19,6 +19,8 @@ equation.
 - [[#benchmark01--perf-report-eval][Benchmark01 + perf report eval]]
   - [[#benchmark01-with-xdp-redirect-loaded-on-host-veth][benchmark01: With XDP redirect loaded on host veth]]
   - [[#benchmark01-perf-report][benchmark01: perf report]]
+- [[#benchmark02---kernel-hack][Benchmark02 - kernel-hack]]
+  - [[#benchmark02-kernel-hack][benchmark02: kernel hack]]
 
 * GitHub
 
@@ -344,4 +346,102 @@ Looking at code for =xsk_build_skb= the problem is quite obvious. The headroom
 for is smaller than =XDP_PACKET_HEADROOM=. Thus, when received by
 =veth_xdp_rcv_skb= it cause =veth_convert_skb_to_xdp_buff= to realloc and copy
 into a new SKB.
+
+* Benchmark02 - kernel-hack
+
+Issue: 
+
+** benchmark02: kernel hack
+
+Host-machine:
+#+begin_example
+Average:        IFACE   rxpck/s   txpck/s    rxkB/s    txkB/s   rxcmp/s   txcmp/s  rxmcst/s   %ifutil
+Average:           lo      0.40      0.40      0.02      0.02      0.00      0.00      0.00      0.00
+Average:        eth42      6.20      6.40      0.41      0.77      0.00      0.00      0.00      0.00
+Average:       ixgbe1      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:         igc1      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:         igb1      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:        i40e1      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:        i40e2      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:       mlx5p1      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:       ixgbe2      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:       mlx5p2      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:      docker0      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:    vethe9b84f1      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:    veth94e3db3      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:        veth1 1023594.60      0.00 497802.84      0.00      0.00      0.00      0.00     40.78
+Average:        veth3      0.00 1023593.90      0.00 507798.54      0.00      0.00      0.00     41.60
+Average:          br0      0.00      0.00      0.00      0.00      0.00      0.00      0.00      0.00
+Average:        veth5 1023596.20      0.00 493805.20      0.00      0.00      0.00      0.00     40.45
+Average:        veth7      0.00 1023597.40      0.00 511798.70      0.00      0.00      0.00     41.93
+[jbrouer@broadwell ~]$ sar -n DEV 2 5
+#+end_example
+
+cnet-graph:
+#+begin_example
+CNDP-cli:/> graph stats 5
++------------------+---------------+---------------+--------+--------+----------+------------+
+|Node              |          Calls|        Objects| Realloc|  Objs/c|   KObjs/c|    Cycles/c|
++------------------+---------------+---------------+--------+--------+----------+------------+
+|ip4_input         |        2558984|      208109703|       2|    59.0|    1007.5|      2942.0|
+|ip4_output        |              0|              0|       1|     0.0|       0.0|         0.0|
+|ip4_forward       |        2558985|      208109764|       1|    59.0|    1007.5|      6300.0|
+|ip4_proto         |              0|              0|       1|     0.0|       0.0|         0.0|
+|udp_input         |              0|              0|       1|     0.0|       0.0|         0.0|
+|udp_output        |              0|              0|       1|     0.0|       0.0|         0.0|
+|pkt_drop          |              0|              0|       1|     0.0|       0.0|         0.0|
+|chnl_callback     |              0|              0|       1|     0.0|       0.0|         0.0|
+|chnl_recv         |              0|              0|       1|     0.0|       0.0|         0.0|
+|kernel_recv       |       79875292|              0|       2|     0.0|       0.0|      2181.0|
+|eth_rx-0          |       79875292|              0|       2|     0.0|       0.0|        48.0|
+|eth_rx-1          |       79875292|      208109938|       2|    59.0|    1007.5|     10629.0|
+|arp_request       |              0|              0|       1|     0.0|       0.0|         0.0|
+|eth_tx-0          |        2558988|      208109938|       2|    59.0|    1007.5|    191278.0|
+|eth_tx-1          |              0|              0|       1|     0.0|       0.0|         0.0|
+|punt_kernel       |              0|              0|       1|     0.0|       0.0|         0.0|
+|ptype             |        2558990|      208110044|       1|    59.0|    1007.6|       565.0|
+|gtpu_input        |              0|              0|       1|     0.0|       0.0|         0.0|
++------------------+---------------+---------------+--------+--------+----------+------------+
+#+end_example
+
+TXGen:
+#+begin_example
+\ Port Count 2     <Main Page>  Copyright (c) 2020-2023 Intel Corporation, Powered by CNDP
+  Flags:Port        : 
+Link State          :         <UP-10000-FD>         <UP-10000-FD>      ---Total Rate---
+Pkts/s Max/Rx       :                   0/0       1049875/1008896       1049875/1008896
+       Max/Tx       :       1049856/1008896                   0/0       1049856/1008896
+MBits/s Rx/Tx       :                0/4326                4293/0             4293/4326
+Broadcast           :                     0                     0
+Multicast           :                     0                     0
+Sizes 64            :                     0                     0
+      65-127        :                     0                     0
+      128-255       :                     0                     0
+      256-511       :                     0                     0
+      512-1023      :                     0             259504871
+      1024-1518     :                     0                     0
+Runts/Jumbos        :                   0/0                   0/0
+ARP/ICMP Pkts       :                   0/0                   0/0
+Errors Rx/Tx        :                   0/0                   0/0
+Dropped Tx          :                     0                     0
+Invalid Rx/Tx       :                   0/0                   0/0
+Total Rx Pkts       :                     0             259448997
+      Tx Pkts       :             260388992                     0
+      Rx MBs        :                     0               1104214
+      Tx MBs        :               1116547                     0
+Pattern Type        :               abcd...               abcd...
+Tx Count/% Rate     :         Forever /100%         Forever /100%
+Pkt Size/Tx Burst   :            512 /   64             64 /   64
+TTL/Port Src/Dest   :        64/ 1234/ 5678        64/ 1234/ 5678
+Pkt Type            :            IPv4 / UDP            IPv4 / UDP
+IP  Destination     :        192.168.100.20        192.168.200.11
+    Source          :        192.168.200.10        192.168.100.21
+MAC Destination     :     1a:bf:be:c1:a9:ea     1e:e4:9e:d4:07:6f
+    Source          :     1e:b3:14:dc:21:cf     1e:e4:9e:d4:07:6f
+
+-- TX-Gen 23.06.0  Powered by CNDP  PID:23 -----------------------------------
+#+end_example
+
+
+
 
