veth_benchmark04: Adjust subsection level to improve ToC
Signed-off-by: Jesper Dangaard Brouer <hawk@kernel.org>

--- a/areas/core/veth_benchmark04.org
+++ b/areas/core/veth_benchmark04.org
@@ -27,7 +27,9 @@ Also described in upstream [[https://lore.kernel.org/all/68f73855-f206-80a2-a546
   - [[#follow-sock_alloc_send_skb][Follow: sock_alloc_send_skb]]
   - [[#complications-due-to-skb_small_head_headroom][Complications due to SKB_SMALL_HEAD_HEADROOM]]
   - [[#bpf_prog_run_generic_xdp][bpf_prog_run_generic_xdp]]
-  - [[#potential-issue-in-veth-skb-redirect][Potential issue in veth "skb" redirect]]
+- [[#potential-issue-in-veth-skb-redirect][Potential issue in veth "skb" redirect]]
+  - [[#trick-__skb2xdp_steal_data][Trick __skb2xdp_steal_data]]
+  - [[#uncertain-approach][Uncertain approach]]
 
 * Code notes
 
@@ -162,13 +164,13 @@ E.g. do_xdp_generic() calls:
  - XDP_REDIRECT: xdp_do_generic_redirect
  - XDP_TX: generic_xdp_tx
 
-** Potential issue in veth "skb" redirect
+* Potential issue in veth "skb" redirect
 
 The =veth_xdp_rcv_skb= code path calls =xdp_do_redirect=, which is somewhat
 problematic, because is what cause the inability to handle SKBs with
 (skb->head_frag=0).
 
-*** Trick __skb2xdp_steal_data
+** Trick __skb2xdp_steal_data
 
 Liang Chen [[https://lore.kernel.org/all/20230816123029.20339-2-liangchen.linux@gmail.com/][patchset V3]] implement stealing data ("skb->head") from SKBs, see
 [[https://lore.kernel.org/all/20230816123029.20339-2-liangchen.linux@gmail.com/#Z31drivers:net:veth.c][__skb2xdp_steal_data]].
@@ -218,7 +220,7 @@ index 509e901da41d..7234eb0297dd 100644
 +}
 #+end_src
 
-*** Uncertain approach
+** Uncertain approach
 
 Idea: Could we extend =xdp_do_redirect= to also handle the kmalloc (and
 "skb_small_head_cache") frames.
