--- a/conference/NetConf2023/page_pool_discussion.org
+++ b/conference/NetConf2023/page_pool_discussion.org
@@ -17,12 +17,6 @@ This presentation will be given at [[http://vger.kernel.org/netconf2023.html][Ne
 
 * Brainstorm                                                       :noexport:
 
-Page Pool started out as: memory optimization for XDP
- - PP alloc cache for XDP_DROP use-case
- - And recycle XDP redirected frames (see =xdp_return_frame=)
- - PP pages could not be recycled via netstack (/possible today/)
- - Optimized for 1-page per packet (keeping page refcnt==1)
-
 Summarise: how PP evolved
 
 Today Page Pool have full netstack recycling support
@@ -32,7 +26,7 @@ Today Page Pool have full netstack recycling support
 
 
 Change to struct page have pointer back to page_pool object
- - c07aea3ef4d4 ("mm: add a signature in struct page")
+ - https://git.kernel.org/torvalds/c/c07aea3ef4d4 ("mm: add a signature in struct page")
 
 
 Include files restructured
@@ -57,8 +51,19 @@ Extending PP with API to hide frag_count handling
  - [PATCH net-next v8 0/6] introduce page_pool_alloc() related API
  - Yunsheng Lin <linyunsheng@huawei.com>
 
+* Slide: History                                                     :export:
 
-* Page Pool evolving into *netstack memory layer*?                   :export:
+Page Pool (PP) started out as: /Memory optimization/ for *XDP*
+ - PP alloc cache for XDP_DROP use-case
+ - And recycle XDP redirected frames (see =xdp_return_frame=)
+ - PP pages could */not/* *be recycled via netstack* (/possible today/)
+ - Optimized for 1-page per packet (keeping page refcnt==1)
+
+History
+ - Developed and proposed at [[https://people.netfilter.org/hawk/presentations/MM-summit2016/generic_page_pool_mm_summit2016.pdf][MM-summit 2016]]
+ - [[https://git.kernel.org/torvalds/c/684009d4fdaf40f][Merged]] with mlx5 NIC [[https://git.kernel.org/torvalds/c/60bbf7eeef10d][driver user]] in 2018
+
+* Slide: Page Pool evolving into *netstack memory layer*?            :export:
 
 * Slide: Thanks                                                      :export:
 
