--- a/conference/NetConf2023/page_pool_discussion.org
+++ b/conference/NetConf2023/page_pool_discussion.org
@@ -19,19 +19,12 @@ This presentation will be given at [[http://vger.kernel.org/netconf2023.html][Ne
 
 Summarise: how PP evolved
 
-Today Page Pool have full netstack recycling support
- - (See =skb_mark_for_recycle()=)
- - Recently removed API for non-recycle option
-   - 535b9c61bdef ("net: page_pool: hide page_pool_release_page()")
-
-
 Change to struct page have pointer back to page_pool object
  - https://git.kernel.org/torvalds/c/c07aea3ef4d4 ("mm: add a signature in struct page")
 
 
 Include files restructured
  - (find commit)
-
 
 
 Page Pool evolving into netstack memory layer
@@ -57,11 +50,47 @@ Page Pool (PP) started out as: /Memory optimization/ for *XDP*
  - PP alloc cache for XDP_DROP use-case
  - And recycle XDP redirected frames (see =xdp_return_frame=)
  - PP pages could */not/* *be recycled via netstack* (/possible today/)
- - Optimized for 1-page per packet (keeping page refcnt==1)
+ - Optimized for *1-page per packet* (keeping page refcnt==1)
 
 History
  - Developed and proposed at [[https://people.netfilter.org/hawk/presentations/MM-summit2016/generic_page_pool_mm_summit2016.pdf][MM-summit 2016]]
  - [[https://git.kernel.org/torvalds/c/684009d4fdaf40f][Merged]] with mlx5 NIC [[https://git.kernel.org/torvalds/c/60bbf7eeef10d][driver user]] in 2018
+
+* Slide: Today                                                       :export:
+
+Today: Page Pool have /full netstack/ *recycling* /support/
+ - Uses [[https://git.kernel.org/torvalds/c/c07aea3ef4d4][fields in struct page]] for pool return path
+ - Default /all SKBs/ using PP does *recycling* (=skb_mark_for_recycle()=)
+ - Recently [[https://git.kernel.org/torvalds/c/535b9c61bdef][removed API]] for non-recycle option (=page_pool_release_page=)
+
+* Slide: Recent PP developments                                      :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+** Slide: Fragmenting pages - */pp_frag_count/*
+
+Permit a driver to perform [[https://git.kernel.org/torvalds/c/52cc6ffc0ab2][fragmenting]] of the page *from within the driver*
+ - Use-case split up by the driver after DMA
+ - Uses field [[https://git.kernel.org/torvalds/c/4ef3960ea19c][pp_frag_count]] in struct page
+
+#+begin_src C
+  struct page *page = page_pool_alloc_pages();
+  page_pool_fragment_page(page, DRIVER_PAGECNT_BIAS_MAX);
+  rx_buf->page = page;
+  rx_buf->pagecnt_bias = DRIVER_PAGECNT_BIAS_MAX;
+  /* process a received buffer */
+  rx_buf->pagecnt_bias--;
+  /* fully consumed then flush the remaining */
+  if (page_pool_defrag_page(page, rx_buf->pagecnt_bias))
+    continue;
+  page_pool_put_defragged_page(pool, page, -1, is_napi);
+#+end_src
+
+@@html:<br/><small>@@
+*Work done by*: /Yunsheng Lin/ and /Alexander Duyck/
+@@html:</small>@@
+
 
 * Slide: Page Pool evolving into *netstack memory layer*?            :export:
 
